--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,9 @@
+ /* @import "./3D-effect.css";  */
+ @import "./3D_effect.css";
+
 #earthBrand {
-    width: 8%;
-    height: 8%;
+    max-width: 100%;
+    height: 2rem;
 }
 
 #brand {
@@ -8,46 +11,94 @@
     color: rgba(255, 255, 255, 0.89);
 }
 
+body {
+    background: repeating-linear-gradient(
+        45deg,
+        green 0px,
+        green 40px,
+        blue 40px,
+        blue 80px
+      );
+}
+
 header {
     background-color: rgb(221, 221, 28);
-    margin: 3%;
     padding: 2%;
     border-radius: 10px;
-    margin-top: auto;
+    width: 60%;
+    position: relative;
+    left: 20%;
+    right: 20%;
+    margin-top: 10%;
+    margin-bottom: 3%;
 }
 
-h1 {
-    text-shadow: 0 1px 0 greenyellow, 0 2px 0 greenyellow,
-    0 3px 0 greenyellow, 0 4px 0 greenyellow,
-    0 5px 0 greenyellow, 0 6px 0 greenyellow,
-    0 7px 0 greenyellow, 0 8px 0 greenyellow,
-    0 9px 0 greenyellow, 0 10px 0 greenyellow,
-    0 11px 0 greenyellow, 0 12px 0 greenyellow,
-    0 20px 30px rgba(0, 0, 0, 0.5);
-    color: green;
-    background-color: black;
-    padding: 3%;
-    text-align: center;
-    width: 35%;
-    margin: auto;
-}
 
 footer p {
+    margin-top: 5%;
     color: gray;
+    background-color: whitesmoke;
+    padding: 3px;
+    width: 50%;
     text-align: center;
+    margin: auto;
+    margin-bottom: 3%;
+    border-radius: 99px 10px;
+}
+
+figcaption {
+    color: black !important;
+    font-weight: bold;
+}
+
+#act-btn {
+    margin: auto;
 }
 
 #reason {
     font-size: 1.35em;
     margin-top: 1%;
-}
-
-.act-btn {
-    margin-left: 45%;
+    font-feature-settings: "smcp" on;
 }
 
 .navbar {
+    margin-bottom: 5vw !important;
     position: fixed;
     top: 0;
-    margin-bottom: 10px;
+    left: 0;
+    z-index: 1;
 }
+
+.container-fluid, #navbar2 {
+    padding-right: 0px;  
+    padding-left: 0px;  
+}
+
+@media only screen and (max-width: 890.90551181px) {
+    header {
+        margin-top: 20%;
+    }
+  }
+
+  /* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px gray; 
+    border-radius: 25px;
+    background-color:rgb(207, 255, 136);
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: lightseagreen; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: lightseagreen; 
+  }
